lintian (2.5.11) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - conffile-has-bad-file-type
      - debug-package-for-multi-arch-same-pkg-not-coinstallable
      - dm-upload-allowed-is-obsolete
      - field-name-typo-in-dep5-copyright
      - font-adobe-copyrighted-fragment
      - maintainer-script-has-unexpanded-debhelper-token
      - shlibs-uses-obsolete-relation
      - untranslatable-debconf-templates
    + Removed:
      - apparently-truncated-elf-binary
      - data.tar.xz-member-without-dpkg-pre-depends
      - debhelper-overrides-need-versioned-build-depends
      - no-source-field
      - preinst-uses-dpkg-maintscript-helper-without-predepends

  * checks/*:
    + [NT] Remove assumption that lintian will chdir into the
      the lab before calling the check.
    + [NT] Be better at avoiding false-positive spelling errors
      for references to packages that also happen to be common
      spelling mistake.  Thanks to Paul Tagliamonte for the
      report.  (Closes: #687464)
  * checks/binaries{,.desc}:
    + [NT] Merge apparently-truncated-elf-binary into
      apparently-corrupted-elf-binary.
    + [NT] Remove some references to objdump in tag descriptions
      as Lintian uses readelf.
    + [JW,NT] Update the "extract SONAME" shell snippet to properly
      handle SONAMEs with uppercase letters.
    + [JW] Recognise any path with matching the GNU multi-arch
      triplet as a "Multi-arch: same"-safe directory.  Thanks to
      Matthias Klose for the report.  (Closes: #681410)
  * checks/changelog-file:
    + [NT] Emit "missing changelog" for packages that are missing
      their usr/share/doc/<pkg>/ dir and do not have a doc symlink.
      Thanks to Faheem Mitha for the report.  (Closes: #683224)
  * checks/conffiles{,.desc}:
    + [NT] Remove leading slash on the filename when emitting
      file-in-etc-rc.d-marked-as-conffile.
    + [NT] Add check for "non-file" conffiles.  Thanks to Guillem