@@ -1,0 +1,10 @@
+/**
+ * The non-free pet-phase in the JSON license that triggers
+ *  the Lintian tag.
+ *
+ * "The software shall be used for good, not evil"
+ */
+
+int main() {
+  return 0;
+}
